# proyecto_colitas

./: .gitignore  CMakeLists.txt  README.md
src/: banco.c  estilos.c  estilos.h  graficos.c  graficos.h  main_grafico.c  procesosprueba.c  pruebasup.c
